--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="favicom.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="MotionShift" content="Videos 3D" />
+    <meta name="MotionShift" content="This is the image gallery of authors." />
     <title>MotionShift</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
